sequential collections can use getFirst() instead of get(0)