@@ -73,7 +73,7 @@ public class AjaxCheckBoxPanel extends FieldPanel<Boolean> {
                 Boolean value = null;
 
                 if (list != null && !list.isEmpty()) {
-                    value = Boolean.TRUE.toString().equalsIgnoreCase(list.get(0).toString());
+                    value = Boolean.TRUE.toString().equalsIgnoreCase(list.getFirst().toString());
                 }
 
                 return value;
@@ -138,7 +138,7 @@ public class AjaxCheckBoxPanel extends FieldPanel<Boolean> {
             @Override
             public Serializable getObject() {
                 return attributable.getPlainAttr(schema).map(Attr::getValues).filter(Predicate.not(List::isEmpty)).
-                        map(values -> Boolean.TRUE.toString().equalsIgnoreCase(values.get(0))).
+                        map(values -> Boolean.TRUE.toString().equalsIgnoreCase(values.getFirst())).
                         orElse(null);
             }
 
