@@ -145,7 +145,7 @@ public class PlainAttrTest extends AbstractTest {
         assertEquals(
                 encryptorManager.getInstance(obscureSchema.getSecretKey()).
                         encode("testvalue", obscureSchema.getCipherAlgorithm()),
-                obscure.getValues().get(0).getStringValue());
+                obscure.getValues().getFirst().getStringValue());
     }
 
     @Test
@@ -170,7 +170,7 @@ public class PlainAttrTest extends AbstractTest {
         assertEquals(
                 encryptorManager.getInstance(obscureSchema.getSecretKey()).
                         encode("testvalue", obscureSchema.getCipherAlgorithm()),
-                attr.getValues().get(0).getStringValue());
+                attr.getValues().getFirst().getStringValue());
     }
 
     @Test
@@ -191,13 +191,13 @@ public class PlainAttrTest extends AbstractTest {
         assertEquals(
                 encryptorManager.getInstance(obscureWithDecodeConversionPattern.getSecretKey()).
                         encode("testvalue", obscureWithDecodeConversionPattern.getCipherAlgorithm()),
-                attr.getValues().get(0).getStringValue());
+                attr.getValues().getFirst().getStringValue());
 
         obscureWithDecodeConversionPattern.setConversionPattern(SyncopeConstants.ENCRYPTED_DECODE_CONVERSION_PATTERN);
         plainSchemaDAO.save(obscureWithDecodeConversionPattern);
 
-        assertNotEquals("testvalue", attr.getValues().get(0).getStringValue());
-        assertEquals("testvalue", attr.getValuesAsStrings().get(0));
+        assertNotEquals("testvalue", attr.getValues().getFirst().getStringValue());
+        assertEquals("testvalue", attr.getValuesAsStrings().getFirst());
     }
 
     @Test
@@ -221,6 +221,6 @@ public class PlainAttrTest extends AbstractTest {
         PlainAttr photo = user.getPlainAttr("photo").orElseThrow();
         assertNotNull(photo);
         assertEquals(1, photo.getValues().size());
-        assertTrue(Arrays.equals(bytes, photo.getValues().get(0).getBinaryValue()));
+        assertTrue(Arrays.equals(bytes, photo.getValues().getFirst().getBinaryValue()));
     }
 }
