@@ -164,7 +164,7 @@ public class OIDCUserManager {
                 switch (intAttrName.getField()) {
                     case "username" -> {
                         if (!values.isEmpty()) {
-                            userTO.setUsername(values.get(0));
+                            userTO.setUsername(values.getFirst());
                         }
                     }
 
