@@ -440,7 +440,7 @@ public class OpenSearchAnySearchDAO extends AbstractAnySearchDAO {
                 build()).toList();
 
         return queries.size() == 1
-                ? queries.get(0)
+                ? queries.getFirst()
                 : new Query.Builder().disMax(QueryBuilders.disMax().queries(queries).build()).build();
     }
 
@@ -451,7 +451,7 @@ public class OpenSearchAnySearchDAO extends AbstractAnySearchDAO {
                 build()).toList();
 
         return queries.size() == 1
-                ? queries.get(0)
+                ? queries.getFirst()
                 : new Query.Builder().disMax(QueryBuilders.disMax().queries(queries).build()).build();
     }
 
@@ -474,7 +474,7 @@ public class OpenSearchAnySearchDAO extends AbstractAnySearchDAO {
                 build()).toList();
 
         return queries.size() == 1
-                ? queries.get(0)
+                ? queries.getFirst()
                 : new Query.Builder().disMax(QueryBuilders.disMax().queries(queries).build()).build();
     }
 
