@@ -339,9 +339,9 @@ public class PullTaskITCase extends AbstractTaskITCase {
             assertEquals(userName, userTO.getUsername());
             assertEquals(IS_FLOWABLE_ENABLED
                     ? "active" : "created", userTO.getStatus());
-            assertEquals("test9@syncope.apache.org", userTO.getPlainAttr("email").orElseThrow().getValues().get(0));
-            assertEquals("test9@syncope.apache.org", userTO.getPlainAttr("userId").orElseThrow().getValues().get(0));
-            assertTrue(Integer.parseInt(userTO.getPlainAttr("fullname").orElseThrow().getValues().get(0)) <= 10);
+            assertEquals("test9@syncope.apache.org", userTO.getPlainAttr("email").orElseThrow().getValues().getFirst());
+            assertEquals("test9@syncope.apache.org", userTO.getPlainAttr("userId").orElseThrow().getValues().getFirst());
+            assertTrue(Integer.parseInt(userTO.getPlainAttr("fullname").orElseThrow().getValues().getFirst()) <= 10);
             assertTrue(userTO.getResources().contains(RESOURCE_NAME_TESTDB));
             assertTrue(userTO.getResources().contains(RESOURCE_NAME_WS2));
 
@@ -351,12 +351,12 @@ public class PullTaskITCase extends AbstractTaskITCase {
             // check for user template
             userTO = USER_SERVICE.read("test7");
             assertNotNull(userTO);
-            assertEquals("TYPE_OTHER", userTO.getPlainAttr("ctype").orElseThrow().getValues().get(0));
+            assertEquals("TYPE_OTHER", userTO.getPlainAttr("ctype").orElseThrow().getValues().getFirst());
             assertEquals(3, userTO.getResources().size());
             assertTrue(userTO.getResources().contains(RESOURCE_NAME_TESTDB));
             assertTrue(userTO.getResources().contains(RESOURCE_NAME_WS2));
             assertEquals(1, userTO.getMemberships().size());
-            assertEquals("f779c0d4-633b-4be5-8f57-32eb478a3ca5", userTO.getMemberships().get(0).getGroupKey());
+            assertEquals("f779c0d4-633b-4be5-8f57-32eb478a3ca5", userTO.getMemberships().getFirst().getGroupKey());
 
             // Unmatching --> Assign (link) - SYNCOPE-658
             assertTrue(userTO.getResources().contains(RESOURCE_NAME_CSV));
@@ -365,7 +365,7 @@ public class PullTaskITCase extends AbstractTaskITCase {
 
             userTO = USER_SERVICE.read("test8");
             assertNotNull(userTO);
-            assertEquals("TYPE_8", userTO.getPlainAttr("ctype").orElseThrow().getValues().get(0));
+            assertEquals("TYPE_8", userTO.getPlainAttr("ctype").orElseThrow().getValues().getFirst());
 
             // Check for ignored user - SYNCOPE-663
             try {
@@ -418,7 +418,7 @@ public class PullTaskITCase extends AbstractTaskITCase {
             assertNotNull(userTO);
             assertEquals(
                     "reconciled@syncope.apache.org",
-                    userTO.getPlainAttr("userId").orElseThrow().getValues().get(0));
+                    userTO.getPlainAttr("userId").orElseThrow().getValues().getFirst());
             assertEquals("suspended", userTO.getStatus());
 
             // enable user on external resource
@@ -472,7 +472,7 @@ public class PullTaskITCase extends AbstractTaskITCase {
                 build());
         assertNotNull(matchingGroups);
         assertEquals(1, matchingGroups.getResult().size());
-        assertEquals(SyncopeConstants.ROOT_REALM, matchingGroups.getResult().get(0).getRealm());
+        assertEquals(SyncopeConstants.ROOT_REALM, matchingGroups.getResult().getFirst().getRealm());
 
         // 3. verify that pulled user is found
         PagedResult<UserTO> matchingUsers = USER_SERVICE.search(
@@ -483,17 +483,17 @@ public class PullTaskITCase extends AbstractTaskITCase {
         assertNotNull(matchingUsers);
         assertEquals(1, matchingUsers.getResult().size());
         // SYNCOPE-898
-        assertEquals("/odd", matchingUsers.getResult().get(0).getRealm());
+        assertEquals("/odd", matchingUsers.getResult().getFirst().getRealm());
 
         // Check for SYNCOPE-436
         assertEquals("pullFromLDAP",
-                matchingUsers.getResult().get(0).getVirAttr("virtualReadOnly").orElseThrow().getValues().get(0));
+                matchingUsers.getResult().getFirst().getVirAttr("virtualReadOnly").orElseThrow().getValues().getFirst());
         // Check for SYNCOPE-270
-        assertNotNull(matchingUsers.getResult().get(0).getPlainAttr("obscure"));
+        assertNotNull(matchingUsers.getResult().getFirst().getPlainAttr("obscure"));
         // Check for SYNCOPE-123
-        assertNotNull(matchingUsers.getResult().get(0).getPlainAttr("photo"));
+        assertNotNull(matchingUsers.getResult().getFirst().getPlainAttr("photo"));
         // Check for SYNCOPE-1343
-        assertEquals("odd", matchingUsers.getResult().get(0).getPlainAttr("title").orElseThrow().getValues().get(0));
+        assertEquals("odd", matchingUsers.getResult().getFirst().getPlainAttr("title").orElseThrow().getValues().getFirst());
 
         PagedResult<UserTO> matchByLastChangeContext = USER_SERVICE.search(
                 new AnyQuery.Builder().realm(SyncopeConstants.ROOT_REALM).
@@ -503,21 +503,21 @@ public class PullTaskITCase extends AbstractTaskITCase {
         assertNotNull(matchByLastChangeContext);
         assertNotEquals(0, matchByLastChangeContext.getTotalCount());
 
-        GroupTO groupTO = matchingGroups.getResult().get(0);
+        GroupTO groupTO = matchingGroups.getResult().getFirst();
         assertNotNull(groupTO);
         assertEquals("testLDAPGroup", groupTO.getName());
         assertTrue(groupTO.getLastChangeContext().contains("Task " + task.getKey()));
-        assertEquals("true", groupTO.getPlainAttr("show").orElseThrow().getValues().get(0));
-        assertEquals(matchingUsers.getResult().get(0).getKey(), groupTO.getUserOwner());
+        assertEquals("true", groupTO.getPlainAttr("show").orElseThrow().getValues().getFirst());
+        assertEquals(matchingUsers.getResult().getFirst().getKey(), groupTO.getUserOwner());
         assertNull(groupTO.getGroupOwner());
         // SYNCOPE-1343, set value title to null on LDAP
         ConnObject userConnObject = RESOURCE_SERVICE.readConnObject(
-                RESOURCE_NAME_LDAP, AnyTypeKind.USER.name(), matchingUsers.getResult().get(0).getKey());
+                RESOURCE_NAME_LDAP, AnyTypeKind.USER.name(), matchingUsers.getResult().getFirst().getKey());
         assertNotNull(userConnObject);
-        assertEquals("odd", userConnObject.getAttr("title").orElseThrow().getValues().get(0));
+        assertEquals("odd", userConnObject.getAttr("title").orElseThrow().getValues().getFirst());
         Attr userDn = userConnObject.getAttr(Name.NAME).orElseThrow();
         updateLdapRemoteObject(RESOURCE_LDAP_ADMIN_DN, RESOURCE_LDAP_ADMIN_PWD,
-                userDn.getValues().get(0), Collections.singletonMap("title", null));
+                userDn.getValues().getFirst(), Collections.singletonMap("title", null));
 
         // SYNCOPE-317
         execSchedTask(TASK_SERVICE, TaskType.PULL, LDAP_PULL_TASK, MAX_WAIT_SECONDS, false);
@@ -544,15 +544,15 @@ public class PullTaskITCase extends AbstractTaskITCase {
                         fiql(SyncopeClient.getUserSearchConditionBuilder().is("username").equalTo("pullFromLDAP").
                                 query()).
                         build());
-        assertNull(matchingUsers.getResult().get(0).getPlainAttr("title").orElse(null));
+        assertNull(matchingUsers.getResult().getFirst().getPlainAttr("title").orElse(null));
 
         // SYNCOPE-1356 remove group membership from LDAP, pull and check in Syncope
         ConnObject groupConnObject = RESOURCE_SERVICE.readConnObject(
-                RESOURCE_NAME_LDAP, AnyTypeKind.GROUP.name(), matchingGroups.getResult().get(0).getKey());
+                RESOURCE_NAME_LDAP, AnyTypeKind.GROUP.name(), matchingGroups.getResult().getFirst().getKey());
         assertNotNull(groupConnObject);
         Attr groupDn = groupConnObject.getAttr(Name.NAME).orElseThrow();
         updateLdapRemoteObject(RESOURCE_LDAP_ADMIN_DN, RESOURCE_LDAP_ADMIN_PWD,
-                groupDn.getValues().get(0), Map.of("uniquemember", "uid=admin,ou=system"));
+                groupDn.getValues().getFirst(), Map.of("uniquemember", "uid=admin,ou=system"));
 
         execSchedTask(TASK_SERVICE, TaskType.PULL, LDAP_PULL_TASK, MAX_WAIT_SECONDS, false);
 
@@ -618,15 +618,15 @@ public class PullTaskITCase extends AbstractTaskITCase {
             AnyObjectCR anyObjectCR = AnyObjectITCase.getSample("pull");
             AnyObjectTO anyObjectTO = createAnyObject(anyObjectCR).getEntity();
             assertNotNull(anyObjectTO);
-            String originalLocation = anyObjectTO.getPlainAttr("location").orElseThrow().getValues().get(0);
+            String originalLocation = anyObjectTO.getPlainAttr("location").orElseThrow().getValues().getFirst();
             assertFalse(originalLocation.startsWith(prefix));
 
             // 2. verify that PrefixMappingItemTransformer was applied during propagation
             // (location starts with given prefix on external resource)
             ConnObject connObjectTO = RESOURCE_SERVICE.readConnObject(
                     RESOURCE_NAME_DBSCRIPTED, anyObjectTO.getType(), anyObjectTO.getKey());
-            assertFalse(anyObjectTO.getPlainAttr("location").orElseThrow().getValues().get(0).startsWith(prefix));
-            assertTrue(connObjectTO.getAttr("LOCATION").orElseThrow().getValues().get(0).startsWith(prefix));
+            assertFalse(anyObjectTO.getPlainAttr("location").orElseThrow().getValues().getFirst().startsWith(prefix));
+            assertTrue(connObjectTO.getAttr("LOCATION").orElseThrow().getValues().getFirst().startsWith(prefix));
 
             // 3. unlink any existing printer and delete from Syncope (printer is now only on external resource)
             if (IS_EXT_SEARCH_ENABLED) {
@@ -856,7 +856,7 @@ public class PullTaskITCase extends AbstractTaskITCase {
 
         // 2. create PullTask with remediation enabled, for the new resource
         PullTaskTO pullTask = (PullTaskTO) TASK_SERVICE.search(new TaskQuery.Builder(TaskType.PULL).
-                resource(RESOURCE_NAME_LDAP).build()).getResult().get(0);
+                resource(RESOURCE_NAME_LDAP).build()).getResult().getFirst();
         assertNotNull(pullTask);
         pullTask.setName(getUUIDString());
         pullTask.setResource(ldap.getKey());
@@ -900,7 +900,7 @@ public class PullTaskITCase extends AbstractTaskITCase {
             AnyCR userCR = remediation.getAnyCRPayload();
             userCR.getResources().clear();
 
-            String email = userCR.getPlainAttr("email").orElseThrow().getValues().get(0);
+            String email = userCR.getPlainAttr("email").orElseThrow().getValues().getFirst();
             userCR.getPlainAttrs().add(new Attr.Builder("userId").value(email).build());
 
             REMEDIATION_SERVICE.remedy(remediation.getKey(), userCR);
@@ -908,7 +908,7 @@ public class PullTaskITCase extends AbstractTaskITCase {
             // 5. user is now found
             UserTO user = USER_SERVICE.read("pullFromLDAP");
             assertNotNull(user);
-            assertEquals(email, user.getPlainAttr("userId").orElseThrow().getValues().get(0));
+            assertEquals(email, user.getPlainAttr("userId").orElseThrow().getValues().getFirst());
 
             // 6. remediation was removed
             try {
@@ -1117,7 +1117,7 @@ public class PullTaskITCase extends AbstractTaskITCase {
             assertNotNull(userTO);
             assertEquals(
                     "testuser2@syncope.apache.org",
-                    userTO.getPlainAttr("userId").orElseThrow().getValues().get(0));
+                    userTO.getPlainAttr("userId").orElseThrow().getValues().getFirst());
             assertEquals(2, userTO.getMemberships().size());
             assertEquals(4, userTO.getResources().size());
         } finally {
@@ -1143,7 +1143,7 @@ public class PullTaskITCase extends AbstractTaskITCase {
         // 3. read e-mail address for user created by the PullTask first execution
         UserTO userTO = USER_SERVICE.read("issuesyncope230");
         assertNotNull(userTO);
-        String email = userTO.getPlainAttr("email").orElseThrow().getValues().iterator().next();
+        String email = userTO.getPlainAttr("email").orElseThrow().getValues().getFirst();
         assertNotNull(email);
 
         // 4. update TESTPULL on external H2 by changing e-mail address
@@ -1156,7 +1156,7 @@ public class PullTaskITCase extends AbstractTaskITCase {
         // 6. verify that the e-mail was updated
         userTO = USER_SERVICE.read("issuesyncope230");
         assertNotNull(userTO);
-        email = userTO.getPlainAttr("email").orElseThrow().getValues().iterator().next();
+        email = userTO.getPlainAttr("email").orElseThrow().getValues().getFirst();
         assertNotNull(email);
         assertEquals("updatedSYNCOPE230@syncope.apache.org", email);
     }
@@ -1248,7 +1248,7 @@ public class PullTaskITCase extends AbstractTaskITCase {
         try {
             assertNotNull(userTO);
             assertEquals(1, result.getPropagationStatuses().size());
-            assertEquals(ExecStatus.SUCCESS, result.getPropagationStatuses().get(0).getStatus());
+            assertEquals(ExecStatus.SUCCESS, result.getPropagationStatuses().getFirst().getStatus());
 
             ExecTO taskExecTO = execSchedTask(
                     TASK_SERVICE, TaskType.PULL, "986867e2-993b-430e-8feb-aa9abb4c1dcd", MAX_WAIT_SECONDS, false);
@@ -1258,7 +1258,7 @@ public class PullTaskITCase extends AbstractTaskITCase {
 
             userTO = USER_SERVICE.read(userTO.getKey());
             assertNotNull(userTO);
-            assertNotNull(userTO.getPlainAttr("firstname").orElseThrow().getValues().get(0));
+            assertNotNull(userTO.getPlainAttr("firstname").orElseThrow().getValues().getFirst());
         } finally {
             removeTestUsers();
         }
@@ -1310,7 +1310,7 @@ public class PullTaskITCase extends AbstractTaskITCase {
 
         // 2. virtual attribute
         userTO = USER_SERVICE.read(userTO.getKey());
-        assertEquals("virtualvalue", userTO.getVirAttr("virtualdata").orElseThrow().getValues().get(0));
+        assertEquals("virtualvalue", userTO.getVirAttr("virtualdata").orElseThrow().getValues().getFirst());
     }
 
     @Test
@@ -1403,9 +1403,9 @@ public class PullTaskITCase extends AbstractTaskITCase {
             ConnObject connObject =
                     RESOURCE_SERVICE.readConnObject(RESOURCE_NAME_LDAP, AnyTypeKind.USER.name(), user.getKey());
             assertNotNull(getLdapRemoteObject(
-                    connObject.getAttr(Name.NAME).orElseThrow().getValues().get(0),
+                    connObject.getAttr(Name.NAME).orElseThrow().getValues().getFirst(),
                     oldCleanPassword,
-                    connObject.getAttr(Name.NAME).orElseThrow().getValues().get(0)));
+                    connObject.getAttr(Name.NAME).orElseThrow().getValues().getFirst()));
 
             // 5. Update the LDAP Connector to retrieve passwords
             ResourceTO ldapResource = RESOURCE_SERVICE.read(RESOURCE_NAME_LDAP);
@@ -1512,7 +1512,7 @@ public class PullTaskITCase extends AbstractTaskITCase {
             user = USER_SERVICE.read("pullFromLDAP");
             assertNotNull(user);
             assertEquals("pullFromLDAP@syncope.apache.org",
-                    user.getPlainAttr("email").orElseThrow().getValues().get(0));
+                    user.getPlainAttr("email").orElseThrow().getValues().getFirst());
 
             group = GROUP_SERVICE.read("testLDAPGroup");
             assertNotNull(group);
@@ -1522,12 +1522,12 @@ public class PullTaskITCase extends AbstractTaskITCase {
             assertNotNull(connObject);
             assertEquals(
                     "pullFromLDAP@syncope.apache.org",
-                    connObject.getAttr("mail").orElseThrow().getValues().get(0));
+                    connObject.getAttr("mail").orElseThrow().getValues().getFirst());
             Attr userDn = connObject.getAttr(Name.NAME).orElseThrow();
             assertNotNull(userDn);
             assertEquals(1, userDn.getValues().size());
             assertNotNull(
-                    getLdapRemoteObject(RESOURCE_LDAP_ADMIN_DN, RESOURCE_LDAP_ADMIN_PWD, userDn.getValues().get(0)));
+                    getLdapRemoteObject(RESOURCE_LDAP_ADMIN_DN, RESOURCE_LDAP_ADMIN_PWD, userDn.getValues().getFirst()));
 
             // ...and propagated
             PagedResult<TaskTO> propagationTasks = TASK_SERVICE.search(new TaskQuery.Builder(TaskType.PROPAGATION).
@@ -1537,13 +1537,13 @@ public class PullTaskITCase extends AbstractTaskITCase {
 
             // 4. update the user on the external resource
             updateLdapRemoteObject(RESOURCE_LDAP_ADMIN_DN, RESOURCE_LDAP_ADMIN_PWD,
-                    userDn.getValues().get(0), Map.of("mail", "pullFromLDAP2@syncope.apache.org"));
+                    userDn.getValues().getFirst(), Map.of("mail", "pullFromLDAP2@syncope.apache.org"));
 
             connObject = RESOURCE_SERVICE.readConnObject(RESOURCE_NAME_LDAP, AnyTypeKind.USER.name(), user.getKey());
             assertNotNull(connObject);
             assertEquals(
                     "pullFromLDAP2@syncope.apache.org",
-                    connObject.getAttr("mail").orElseThrow().getValues().get(0));
+                    connObject.getAttr("mail").orElseThrow().getValues().getFirst());
 
             // 5. exec the pull task again
             execution = execSchedTask(TASK_SERVICE, TaskType.PULL, pullTask.getKey(), MAX_WAIT_SECONDS, false);
@@ -1554,7 +1554,7 @@ public class PullTaskITCase extends AbstractTaskITCase {
             assertNotNull(user);
             assertEquals(
                     "pullFromLDAP2@syncope.apache.org",
-                    user.getPlainAttr("email").orElseThrow().getValues().get(0));
+                    user.getPlainAttr("email").orElseThrow().getValues().getFirst());
 
             // ...and propagated
             propagationTasks = TASK_SERVICE.search(new TaskQuery.Builder(TaskType.PROPAGATION).
@@ -1608,25 +1608,25 @@ public class PullTaskITCase extends AbstractTaskITCase {
 
             pullFromLDAP4issue1656 = USER_SERVICE.read("pullFromLDAP_issue1656");
             assertEquals("pullFromLDAP_issue1656@syncope.apache.org",
-                    pullFromLDAP4issue1656.getPlainAttr("email").orElseThrow().getValues().get(0));
+                    pullFromLDAP4issue1656.getPlainAttr("email").orElseThrow().getValues().getFirst());
             // 2. Edit mail attribute directly on the resource in order to have a not valid email
             ConnObject connObject = RESOURCE_SERVICE.readConnObject(
                     RESOURCE_NAME_LDAP, AnyTypeKind.USER.name(), pullFromLDAP4issue1656.getKey());
             assertNotNull(connObject);
             assertEquals("pullFromLDAP_issue1656@syncope.apache.org",
-                    connObject.getAttr("mail").orElseThrow().getValues().get(0));
+                    connObject.getAttr("mail").orElseThrow().getValues().getFirst());
             Attr userDn = connObject.getAttr(Name.NAME).orElseThrow();
             assertNotNull(userDn);
             assertEquals(1, userDn.getValues().size());
             updateLdapRemoteObject(RESOURCE_LDAP_ADMIN_DN, RESOURCE_LDAP_ADMIN_PWD,
-                    userDn.getValues().get(0), Map.of("mail", "pullFromLDAP_issue1656@"));
+                    userDn.getValues().getFirst(), Map.of("mail", "pullFromLDAP_issue1656@"));
             // 3. Pull again from resource-ldap
             execution = execSchedTask(TASK_SERVICE, TaskType.PULL, pullTask.getKey(), MAX_WAIT_SECONDS, false);
             assertEquals(ExecStatus.SUCCESS, ExecStatus.valueOf(execution.getStatus()));
             assertTrue(execution.getMessage().contains("UPDATE FAILURE"));
             pullFromLDAP4issue1656 = USER_SERVICE.read("pullFromLDAP_issue1656");
             assertEquals("pullFromLDAP_issue1656@syncope.apache.org",
-                    pullFromLDAP4issue1656.getPlainAttr("email").orElseThrow().getValues().get(0));
+                    pullFromLDAP4issue1656.getPlainAttr("email").orElseThrow().getValues().getFirst());
             String pullFromLDAP4issue1656Key = pullFromLDAP4issue1656.getKey();
             // a remediation for pullFromLDAP_issue1656 email should have been created
             PagedResult<RemediationTO> remediations =
